--- a/app/stylesheets/sass/modules/_m-cart.sass
+++ b/app/stylesheets/sass/modules/_m-cart.sass
@@ -14,10 +14,6 @@
     padding-right: 1%
     +media($tablet)
       padding-right: 0
-  // .l-nine
-    // padding-right: 4%
-    // +media($tablet)
-    //   padding-right: 0
 
 .m-cart--timeline
   width: 2px
@@ -102,6 +98,15 @@
     margin-top: 20px
     width: 100%
     text-align: center
+
+.m-cart--options-box-or
+  @extend %adriane-italic-serif
+  font-size: em(17)
+  text-align: center
+  color: $light-blue
+  padding-right: 25px
+  margin-bottom: 22px
+  width: 100%
 
 .m-cart--options-box
   +clearfix
@@ -235,16 +240,19 @@
   position: relative
   top: -40px
   padding-top: 40px
+  .m-cart--details-title
+    padding-right: 0
   +media($tablet)
     padding-left: 70px
     padding-right: 70px
-  +media($mobile)
-    padding-left: 0
-    padding-right: 0
-  &.is-mobile
     width: 90%
     top: 0
     margin: 0 5%
+  +media($mobile)
+    padding-left: 0
+    padding-right: 0
+    margin: 0
+    width: 100%
   &.is-fixed
     position: fixed
     top: 0px
@@ -291,10 +299,20 @@
   margin: 40px 10px 40px 0
   +media($tablet)
     margin: 40px 0
+  +media($mobile)
+    margin: 5px 0
+    padding: 35px 20px
+    border-width: 2px
   &.last
     margin-right: 0
+  h2
+    @extend %brandon-bold-sans
+    font-size: em(32)
   &.is-active
     background-color: $brand-color
+    border-color: $brand-color
+    h2
+      color: white
   img
     height: 135px
     display: inline-block
