--- a/app/stylesheets/sass/modules/_m-mobile-menu.sass
+++ b/app/stylesheets/sass/modules/_m-mobile-menu.sass
@@ -28,6 +28,7 @@
       left: 0px
 
   .menu-bar
+    display: none
     position: fixed
     left: 0px
     top: 0
